--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style/style.css">
 
 </head>
 <body>
@@ -48,7 +48,7 @@
                 <div class="row">
                     <div class="col-md-1"></div>
                     <div class="col-md-10">
-                        <img class="img-fluid float-left headimage" src="Alex Charland Headshot Square.jpg">
+                        <img class="img-fluid float-left headimage" src="assets/images/Alex Charland Headshot Square.jpg">
                         <p>
                             Thanks for visiting my portfolio site! Here's some information about who I am:
                         </p>
