--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/style/style.css">
 
 </head>
 <body>
@@ -41,7 +41,7 @@
                 <div class="row ">
                     <div class="col-md-1"></div>
                     <div class="col-md-10 page-title">
-                        <h1>About Me</h1>
+                        <h1>Portfolio</h1>
                     </div>
                     <div class="col-md-1"></div>
                 </div>
@@ -51,7 +51,7 @@
                         <div class="row mb-4">
                             <div class="col-md-6">
                                 <div class="row">
-                                    <a class="col-md-12 photo-tile" href="https://hangmanwordgame.com/?fca=1&success=0#/" target="_blank">
+                                    <a class="col-md-12 photo-tile" href="https://ac3charland.github.io/Word-Guess-Game/" target="_blank">
                                         <img class="portfolio-img img-fluid center-block" src="300.jpeg" alt="image1">
                                         <div class="portfolio-label text-center">Hangman</div>
                                     </a>
@@ -59,7 +59,7 @@
                             </div>
                             <div class="col-md-6">
                                 <div class="row">
-                                    <a class="col-md-12 photo-tile" href="https://worldofwarcraft.com/en-us/" target="_blank">
+                                    <a class="col-md-12 photo-tile" href="https://ac3charland.github.io/unit-4-game/" target="_blank">
                                         <img class="portfolio-img img-fluid center-block" src="download.jpeg" alt="image2">
                                         <div class="portfolio-label text-center">RPG Game</div>
                                     </a>
@@ -69,27 +69,9 @@
                         <div class="row mb-4">
                             <div class="col-md-6">
                                 <div class="row">
-                                    <a class="col-md-12 photo-tile" href="https://www.jeopardy.com/" target="_blank">
+                                    <a class="col-md-12 photo-tile" href="https://ac3charland.github.io/TriviaGame/" target="_blank">
                                         <img class="portfolio-img img-fluid center-block" src="download (1).jpeg" alt="image3">
                                         <div class="portfolio-label text-center">Trivia Game</div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="row">
-                                    <a class="col-md-12 photo-tile" href="https://www.rutgers.edu/" target="_blank">
-                                        <img class="portfolio-img img-fluid center-block" src="download (2).jpeg" alt="image4">
-                                        <div class="portfolio-label text-center">Rutgers Info Widget</div>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row mb-4">
-                            <div class="col-md-6">
-                                <div class="row">
-                                    <a class="col-md-12 photo-tile" href="https://en.wikipedia.org/wiki/Rock%E2%80%93paper%E2%80%93scissors" target="_blank">
-                                        <img class="portfolio-img img-fluid center-block" src="download (3).jpeg" alt="image5">
-                                        <div class="portfolio-label text-center">Rock Paper Scissors</div>
                                     </a>
                                 </div>
                             </div>
