--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
                 <div class="row ">
                     <div class="col-md-1"></div>
                     <div class="col-md-10 page-title">
-                        <h1>About Me</h1>
+                        <h1>Portfolio</h1>
                     </div>
                     <div class="col-md-1"></div>
                 </div>
