Updated style & fixed bugs on portfolio page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Condensed:700i" rel="stylesheet">
     <link rel="stylesheet" href="assets/style/style.css">
 
 </head>
@@ -49,43 +50,72 @@
                     <div class="row">
                         <div class="col-md-1"></div>
                         <div class="col-md-10">
+
                             <div class="row mb-4">
                                 <div class="col-md-6">
                                     <div class="row">
-                                        <a class="col-md-12 photo-tile" href="https://ac3charland.github.io/Word-Guess-Game/"
-                                            target="_blank">
-                                            <img class="portfolio-img img-fluid center-block" src="assets/images/Hangman.png"
-                                                alt="image1">
-                                            <div class="portfolio-label text-center">Hangman<a href="https://github.com/ac3charland/Word-Guess-Game">(Github)</a></div>
-                                        </a>
+                                        <figure class="figure photo-tile col-md-12">
+                                            <a href="https://ac3charland.github.io/Word-Guess-Game/">
+                                                <img class="portfolio-img img-fluid center-block" src="assets/images/Hangman.png" alt="image1">
+                                            </a>
+                                            <figcaption class="figure-caption text-center">Hangman <a href="https://github.com/ac3charland/Word-Guess-Game">(Github)</a></figcaption>
+                                        </figure>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="row">
-                                        <a class="col-md-12 photo-tile" href="https://ac3charland.github.io/unit-4-game/"
-                                            target="_blank">
-                                            <img class="portfolio-img img-fluid center-block" src="assets/images/RPG.png" alt="image2">
-                                            <div class="portfolio-label text-center">RPG Game <a href="https://github.com/ac3charland/unit-4-game">(Github)</a></div>
-                                        </a>
+                                        <figure class="figure photo-tile col-md-12">
+                                            <a href="https://ac3charland.github.io/unit-4-game/" target="_blank">
+                                                <img class="portfolio-img img-fluid center-block" src="assets/images/RPG.png" alt="image2">
+                                            </a>
+                                            <figcaption class="figure-caption text-center">RPG Game <a href="https://github.com/ac3charland/unit-4-game">(Github)</a></figcaption>
+                                        </figure>
                                     </div>
                                 </div>
                             </div>
+
                             <div class="row mb-4">
                                 <div class="col-md-6">
                                     <div class="row">
-                                        <a class="col-md-12 photo-tile" href="https://ac3charland.github.io/TriviaGame/" target="_blank">
-                                            <img class="portfolio-img img-fluid center-block" src="assets/images/Trivia.png"
-                                                alt="image3">
-                                            <div class="portfolio-label text-center">Trivia Game <a href="https://github.com/ac3charland/TriviaGame">(Github)</a></div>
-                                        </a>
+                                        <figure class="figure photo-tile col-md-12"> 
+                                            <a href="https://ac3charland.github.io/TriviaGame/" target="_blank">
+                                                <img class="portfolio-img img-fluid center-block" src="assets/images/Trivia.png" alt="image3">
+                                            </a>
+                                            <figcaption class="figure-caption text-center">Trivia Game <a href="https://github.com/ac3charland/TriviaGame">(Github)</a></figcaption>
+                                        </figure>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="view overlay">
-                                        <img src="https://mdbootstrap.com/img/Photos/Others/forest-sm.jpg" class="img-fluid " alt="smaple image">
-                                        <div class="mask flex-center rgba-red-strong">
-                                            <p class="white-text">Strong overlay</p>
-                                        </div>
+                                    <div class="row">
+                                        <figure class="figure photo-tile col-md-12">
+                                            <a href="https://weatherwars.herokuapp.com/index.html" target="_blank">
+                                                <img class="portfolio-img img-fluid center-block" src="assets/images/WeatherWars.png" alt="image4">
+                                            </a>
+                                            <figcaption class="figure-caption text-center">Weather Wars <a href="https://github.com/ac3charland/WeatherWars">(Github)</a></figcaption>
+                                        </figure>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row mb-4">
+                                <div class="col-md-6">
+                                    <div class="row">
+                                        <figure class="figure photo-tile col-md-12">
+                                            <a href="https://secure-lowlands-41424.herokuapp.com/" target="_blank">
+                                                <img class="portfolio-img img-fluid center-block" src="assets/images/MontyPython.png" alt="image3">
+                                            </a>
+                                            <figcaption class="figure-caption text-center">Monty Python's FriendFinder <a href="https://github.com/ac3charland/FriendFinder">(Github)</a></figcaption>
+                                        </figure>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="row">
+                                        <figure class="figure photo-tile col-md-12">
+                                            <a href="https://hidden-plains-92005.herokuapp.com/" target="_blank">
+                                                <img class="portfolio-img img-fluid center-block" src="assets/images/EatABurger.png" alt="image4">
+                                            </a>
+                                            <figcaption class="figure-caption text-center">EatABurger <a href="https://github.com/ac3charland/EatABurger">(Github)</a></figcaption>
+                                        </figure>
                                     </div>
                                 </div>
                             </div>
