Updated About page.

--- a/index.html
+++ b/index.html
@@ -52,32 +52,37 @@
                         <div class="col-md-10">
                             <img class="img-fluid float-left headimage" src="assets/images/Alex Charland Headshot Square.jpg">
                             <p>
-                                Thanks for visiting my portfolio site! Here's some information about who I am:
+                                I'm a native iOS and Full Stack Web Developer with experience in Consulting, Healthcare and Biological Sciences, as well as a UW Madison
+                                graduate with a double major in Biology and Jazz Studies. I'm currently self-taught in Swift (iOS) and have just acquired MERN stack
+                                skills at the University of Minnesota's Coding Bootcamp. 
+                                
                             </p>
                             <p>
-                                I spent five years at the University of Wisconsin double majoring in Biology and Jazz Studies,
-                                and graduated in 2017
-                                with a Bachelor of Science. After I realized sometime around my last semester that neither of
-                                my majors were what I
-                                wanted to pursue as my career, I decided to try teaching myself to code. After spending a year
-                                teaching myself Swift
-                                and loving every minute, I've decided I want to make coding my career!
+                                Some of the technologies and languages I'm familiar with include Swift, Javascript/jQuery, the MERN stack, Bootstrap, Materialize,
+                                and Firebase, along with software like Excel, Word, Access, VS Code, XCode, Eclipse, and IntelliJ. I'm driven and curious,
+                                with an eye for detail and a love of collaboration, and I'm eager to join a diverse environment with teamwork-based problem
+                                solving and opportunities to learn from others. If I sound like the kind
+                                of developer you'd want in your company, feel free to <a href="contact.html">contact</a> me with questions or inquiries.
+
                             </p>
-                            <p>
-                                To that end, I'm participating in the University of Minnesota's full time Coding Bootcamp this
-                                fall. I'll learn a bunch
-                                of cool stuff including Bootstrap, Javascript, jQuery, JSON, AJAX, Node.js, MySQL, MongoDB,
-                                Express, Java, and MERN.
-                                After that's finished, I hope to become a web developer or software engineer in the Twin Cities
-                                area. As a lifelong
-                                learner and lover of collaborative coding, I can't wait to find my first full-time coding job.
-                                If I sound like the kind
-                                of developer you'd want in your company, feel free to contact me with questions, or just hire
-                                me!
-                            </p>
-                            <p>
-                                Seriously, please hire me.
-                            </p>
+                            
+                            <div class="row text-center">
+                                <div class="col-md-4">
+                                    <p>
+                                        <a href="https://github.com/ac3charland">My Github</a>
+                                    </p>
+                                </div>
+                                <div class="col-md-4">
+                                    <p>
+                                        <a href="https://www.linkedin.com/in/alex-charland-4b94b3170/">My LinkedIn</a>
+                                    </p>
+                                </div>
+                                <div class="col-md-4">
+                                    <p>
+                                        <a href="mailto:ac3charland@gmail.com">My Email</a>
+                                    </p>
+                                </div>
+                            </div>
                         </div>
                         <div class="col-md-1"></div>
                     </div>
