Minor changes to footer.

--- a/contact.html
+++ b/contact.html
@@ -71,10 +71,10 @@
     </div>
     
     <div class="footer text-center">
-        <h6>Copyright ©2018 AC3 Industries</h6>
+        <h6>Copyright ©2018 Alex Charland</h6>
         <h6>
-            <a href="https://github.com/ac3charland">Github</a>
-            <a href="https://www.linkedin.com/in/alex-charland-4b94b3170/">LinkedIn</a>
+            <a href="https://github.com/ac3charland">Github</a> | 
+            <a href="https://www.linkedin.com/in/alex-charland-4b94b3170/">LinkedIn</a> | 
             <a href="mailto:ac3charland@gmail.com">Email</a>
         </h6>
     </div>
