--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="row">
                         <div class="col-md-1"></div>
                         <div class="col-md-10">
-                            <img class="img-fluid float-left headimage" src="assets/images/Alex Charland Headshot Square.jpg">
+                            <img class="img-fluid float-left headimage" src="assets/images/Headshot 12.11.18 Square.jpg">
                             <p>
                                 I'm a native iOS and Full Stack Web Developer with experience in Consulting, Healthcare and Biological Sciences, as well as a UW Madison
                                 graduate with a double major in Biology and Jazz Studies. I'm currently self-taught in Swift (iOS) and have just acquired MERN stack
@@ -92,10 +92,10 @@
         </div>
     </div>
     <div class="footer text-center">
-        <h6>Copyright ©2018 AC3 Industries</h6>
+        <h6>Copyright ©2018 Alex Charland</h6>
         <h6>
-            <a href="https://github.com/ac3charland">Github</a>
-            <a href="https://www.linkedin.com/in/alex-charland-4b94b3170/">LinkedIn</a>
+            <a href="https://github.com/ac3charland">Github</a> | 
+            <a href="https://www.linkedin.com/in/alex-charland-4b94b3170/">LinkedIn</a> |
             <a href="mailto:ac3charland@gmail.com">Email</a>
         </h6>
     </div>
