--- a/portfolio.html
+++ b/portfolio.html
@@ -38,8 +38,8 @@
         
         <div class="container">
             <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-8 main-content">
+                <div class="col-md-1"></div>
+                <div class="col-md-10 main-content">
                     <div class="row ">
                         <div class="col-md-1"></div>
                         <div class="col-md-10 page-title">
@@ -58,7 +58,15 @@
                                             <a href="https://ac3charland.github.io/Word-Guess-Game/">
                                                 <img class="portfolio-img img-fluid center-block" src="assets/images/Hangman.png" alt="image1">
                                             </a>
-                                            <figcaption class="figure-caption text-center">Hangman <a href="https://github.com/ac3charland/Word-Guess-Game">(Github)</a></figcaption>
+                                            <figcaption class="figure-caption text-center"><strong>Hangman</strong><a href="https://github.com/ac3charland/Word-Guess-Game">(Github)</a></figcaption>
+                                            <figcaption class="figure-caption text-center">Test Caption 2 </figcaption>
+                                            <figcaption class="figure-caption text-left">Caption List:
+                                                <ul>
+                                                    <li>Item 1</li>
+                                                    <li>Item 2</li>
+                                                    <li>Item 3</li>
+                                                </ul>    
+                                            </figcaption>
                                         </figure>
                                     </div>
                                 </div>
@@ -68,7 +76,15 @@
                                             <a href="https://ac3charland.github.io/unit-4-game/" target="_blank">
                                                 <img class="portfolio-img img-fluid center-block" src="assets/images/RPG.png" alt="image2">
                                             </a>
-                                            <figcaption class="figure-caption text-center">RPG Game <a href="https://github.com/ac3charland/unit-4-game">(Github)</a></figcaption>
+                                            <figcaption class="figure-caption text-center"><strong>RPG Game</strong><a href="https://github.com/ac3charland/unit-4-game">(Github)</a></figcaption>
+                                            <figcaption class="figure-caption text-center">Test Caption 2 </figcaption>
+                                            <figcaption class="figure-caption text-left">Caption List:
+                                                <ul>
+                                                    <li>Item 1</li>
+                                                    <li>Item 2</li>
+                                                    <li>Item 3</li>
+                                                </ul>
+                                            </figcaption>
                                         </figure>
                                     </div>
                                 </div>
@@ -81,7 +97,15 @@
                                             <a href="https://ac3charland.github.io/TriviaGame/" target="_blank">
                                                 <img class="portfolio-img img-fluid center-block" src="assets/images/Trivia.png" alt="image3">
                                             </a>
-                                            <figcaption class="figure-caption text-center">Trivia Game <a href="https://github.com/ac3charland/TriviaGame">(Github)</a></figcaption>
+                                            <figcaption class="figure-caption text-center"><strong>Trivia Game</strong><a href="https://github.com/ac3charland/TriviaGame">(Github)</a></figcaption>
+                                            <figcaption class="figure-caption text-center">Test Caption 2 </figcaption>
+                                            <figcaption class="figure-caption text-left">Caption List:
+                                                <ul>
+                                                    <li>Item 1</li>
+                                                    <li>Item 2</li>
+                                                    <li>Item 3</li>
+                                                </ul>
+                                            </figcaption>
                                         </figure>
                                     </div>
                                 </div>
@@ -91,7 +115,15 @@
                                             <a href="https://weatherwars.herokuapp.com/index.html" target="_blank">
                                                 <img class="portfolio-img img-fluid center-block" src="assets/images/WeatherWars.png" alt="image4">
                                             </a>
-                                            <figcaption class="figure-caption text-center">Weather Wars <a href="https://github.com/ac3charland/WeatherWars">(Github)</a></figcaption>
+                                            <figcaption class="figure-caption text-center"><strong>Weather Wars</strong><a href="https://github.com/ac3charland/WeatherWars">(Github)</a></figcaption>
+                                            <figcaption class="figure-caption text-center">Test Caption 2 </figcaption>
+                                            <figcaption class="figure-caption text-left">Caption List:
+                                                <ul>
+                                                    <li>Item 1</li>
+                                                    <li>Item 2</li>
+                                                    <li>Item 3</li>
+                                                </ul>
+                                            </figcaption>
                                         </figure>
                                     </div>
                                 </div>
@@ -104,7 +136,15 @@
                                             <a href="https://secure-lowlands-41424.herokuapp.com/" target="_blank">
                                                 <img class="portfolio-img img-fluid center-block" src="assets/images/MontyPython.png" alt="image3">
                                             </a>
-                                            <figcaption class="figure-caption text-center">Monty Python's FriendFinder <a href="https://github.com/ac3charland/FriendFinder">(Github)</a></figcaption>
+                                            <figcaption class="figure-caption text-center"><strong>Monty Python's FriendFinder</strong><a href="https://github.com/ac3charland/FriendFinder">(Github)</a></figcaption>
+                                            <figcaption class="figure-caption text-center">Test Caption 2 </figcaption>
+                                            <figcaption class="figure-caption text-left">Caption List:
+                                                <ul>
+                                                    <li>Item 1</li>
+                                                    <li>Item 2</li>
+                                                    <li>Item 3</li>
+                                                </ul>
+                                            </figcaption>
                                         </figure>
                                     </div>
                                 </div>
@@ -114,7 +154,15 @@
                                             <a href="https://hidden-plains-92005.herokuapp.com/" target="_blank">
                                                 <img class="portfolio-img img-fluid center-block" src="assets/images/EatABurger.png" alt="image4">
                                             </a>
-                                            <figcaption class="figure-caption text-center">EatABurger <a href="https://github.com/ac3charland/EatABurger">(Github)</a></figcaption>
+                                            <figcaption class="figure-caption text-center"><strong>EatABurger</strong><a href="https://github.com/ac3charland/EatABurger">(Github)</a></figcaption>
+                                            <figcaption class="figure-caption text-center">Test Caption 2 </figcaption>
+                                            <figcaption class="figure-caption text-left">Caption List:
+                                                <ul>
+                                                    <li>Item 1</li>
+                                                    <li>Item 2</li>
+                                                    <li>Item 3</li>
+                                                </ul>
+                                            </figcaption>
                                         </figure>
                                     </div>
                                 </div>
@@ -123,7 +171,7 @@
                         <div class="col-md-1"></div>
                     </div>
                 </div>
-                <div class="col-md-2"></div>
+                <div class="col-md-1"></div>
             </div>
         </div>
     </div>
