Added portfolio copy.

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,13 +58,12 @@
                                             <a href="https://ac3charland.github.io/Word-Guess-Game/">
                                                 <img class="portfolio-img img-fluid center-block" src="assets/images/Hangman.png" alt="image1">
                                             </a>
-                                            <figcaption class="figure-caption text-center"><strong>Hangman</strong><a href="https://github.com/ac3charland/Word-Guess-Game">(Github)</a></figcaption>
-                                            <figcaption class="figure-caption text-center">Test Caption 2 </figcaption>
-                                            <figcaption class="figure-caption text-left">Caption List:
+                                            <figcaption class="figure-caption text-center"><strong>Hangman </strong><a href="https://github.com/ac3charland/Word-Guess-Game">(Github)</a></figcaption>
+                                            <figcaption class="figure-caption text-center">A hangman-style game built in Javascript and based around the theme of U.S. presidents. </figcaption>
+                                            <figcaption class="figure-caption text-left">Technologies Used:
                                                 <ul>
-                                                    <li>Item 1</li>
-                                                    <li>Item 2</li>
-                                                    <li>Item 3</li>
+                                                    <li>Bootstrap</li>
+                                                    <li>Javascript</li>
                                                 </ul>    
                                             </figcaption>
                                         </figure>
@@ -73,16 +72,19 @@
                                 <div class="col-md-6">
                                     <div class="row">
                                         <figure class="figure photo-tile col-md-12">
-                                            <a href="https://ac3charland.github.io/unit-4-game/" target="_blank">
-                                                <img class="portfolio-img img-fluid center-block" src="assets/images/RPG.png" alt="image2">
+                                            <a href="https://shredditmern.herokuapp.com/" target="_blank">
+                                                <img class="portfolio-img img-fluid center-block" src="assets/images/Shreddit.png" alt="image2">
                                             </a>
-                                            <figcaption class="figure-caption text-center"><strong>RPG Game</strong><a href="https://github.com/ac3charland/unit-4-game">(Github)</a></figcaption>
-                                            <figcaption class="figure-caption text-center">Test Caption 2 </figcaption>
-                                            <figcaption class="figure-caption text-left">Caption List:
+                                            <figcaption class="figure-caption text-center"><strong>Shreddit </strong><a href="https://github.com/ac3charland/Shreddit">(Github)</a></figcaption>
+                                            <figcaption class="figure-caption text-center">A full-stack MERN application allowing users to create short melodies in a grid-based sequencer. </figcaption>
+                                            <figcaption class="figure-caption text-left">Technologies Used:
                                                 <ul>
-                                                    <li>Item 1</li>
-                                                    <li>Item 2</li>
-                                                    <li>Item 3</li>
+                                                    <li>MongoDB</li>
+                                                    <li>React</li>
+                                                    <li>Materialzie</li>
+                                                    <li>Express</li>
+                                                    <li>Node.js</li>
+                                                    <li>Tone.js</li>
                                                 </ul>
                                             </figcaption>
                                         </figure>
@@ -97,13 +99,12 @@
                                             <a href="https://ac3charland.github.io/TriviaGame/" target="_blank">
                                                 <img class="portfolio-img img-fluid center-block" src="assets/images/Trivia.png" alt="image3">
                                             </a>
-                                            <figcaption class="figure-caption text-center"><strong>Trivia Game</strong><a href="https://github.com/ac3charland/TriviaGame">(Github)</a></figcaption>
-                                            <figcaption class="figure-caption text-center">Test Caption 2 </figcaption>
-                                            <figcaption class="figure-caption text-left">Caption List:
+                                            <figcaption class="figure-caption text-center"><strong>Trivia Game </strong><a href="https://github.com/ac3charland/TriviaGame">(Github)</a></figcaption>
+                                            <figcaption class="figure-caption text-center">A timed trivia game based around the theme of Star Wars memes.</figcaption>
+                                            <figcaption class="figure-caption text-left">Technologies Used:
                                                 <ul>
-                                                    <li>Item 1</li>
-                                                    <li>Item 2</li>
-                                                    <li>Item 3</li>
+                                                    <li>Bootstrap</li>
+                                                    <li>jQuery</li>
                                                 </ul>
                                             </figcaption>
                                         </figure>
@@ -115,13 +116,14 @@
                                             <a href="https://weatherwars.herokuapp.com/index.html" target="_blank">
                                                 <img class="portfolio-img img-fluid center-block" src="assets/images/WeatherWars.png" alt="image4">
                                             </a>
-                                            <figcaption class="figure-caption text-center"><strong>Weather Wars</strong><a href="https://github.com/ac3charland/WeatherWars">(Github)</a></figcaption>
-                                            <figcaption class="figure-caption text-center">Test Caption 2 </figcaption>
-                                            <figcaption class="figure-caption text-left">Caption List:
+                                            <figcaption class="figure-caption text-center"><strong>Weather Wars </strong><a href="https://github.com/ac3charland/WeatherWars">(Github)</a></figcaption>
+                                            <figcaption class="figure-caption text-center">A turn-based combat game that pits two cities against one another based on their current weather.</figcaption>
+                                            <figcaption class="figure-caption text-left">Technologies Used:
                                                 <ul>
-                                                    <li>Item 1</li>
-                                                    <li>Item 2</li>
-                                                    <li>Item 3</li>
+                                                    <li>API Calls to Weather Services</li>
+                                                    <li>Materialize</li>
+                                                    <li>Firebase</li>
+                                                    <li>jQuery</li>
                                                 </ul>
                                             </figcaption>
                                         </figure>
@@ -136,13 +138,12 @@
                                             <a href="https://secure-lowlands-41424.herokuapp.com/" target="_blank">
                                                 <img class="portfolio-img img-fluid center-block" src="assets/images/MontyPython.png" alt="image3">
                                             </a>
-                                            <figcaption class="figure-caption text-center"><strong>Monty Python's FriendFinder</strong><a href="https://github.com/ac3charland/FriendFinder">(Github)</a></figcaption>
-                                            <figcaption class="figure-caption text-center">Test Caption 2 </figcaption>
-                                            <figcaption class="figure-caption text-left">Caption List:
+                                            <figcaption class="figure-caption text-center"><strong>Monty Python's FriendFinder </strong><a href="https://github.com/ac3charland/FriendFinder">(Github)</a></figcaption>
+                                            <figcaption class="figure-caption text-center">A personality test to find your ideal Monty Python viewing partner based on a database of previous tests.</figcaption>
+                                            <figcaption class="figure-caption text-left">Technologies Used:
                                                 <ul>
-                                                    <li>Item 1</li>
-                                                    <li>Item 2</li>
-                                                    <li>Item 3</li>
+                                                    <li>Bootstrap</li>
+                                                    <li>Express.js</li>
                                                 </ul>
                                             </figcaption>
                                         </figure>
@@ -154,13 +155,14 @@
                                             <a href="https://hidden-plains-92005.herokuapp.com/" target="_blank">
                                                 <img class="portfolio-img img-fluid center-block" src="assets/images/EatABurger.png" alt="image4">
                                             </a>
-                                            <figcaption class="figure-caption text-center"><strong>EatABurger</strong><a href="https://github.com/ac3charland/EatABurger">(Github)</a></figcaption>
-                                            <figcaption class="figure-caption text-center">Test Caption 2 </figcaption>
-                                            <figcaption class="figure-caption text-left">Caption List:
+                                            <figcaption class="figure-caption text-center"><strong>EatABurger </strong><a href="https://github.com/ac3charland/EatABurger">(Github)</a></figcaption>
+                                            <figcaption class="figure-caption text-center">The world's finest purveyor of virtual burgers. </figcaption>
+                                            <figcaption class="figure-caption text-left">Technologies Used:
                                                 <ul>
-                                                    <li>Item 1</li>
-                                                    <li>Item 2</li>
-                                                    <li>Item 3</li>
+                                                    <li>Handlebars.js</li>
+                                                    <li>Express.js</li>
+                                                    <li>MySQL</li>
+                                                    <li>MVC Design</li>
                                                 </ul>
                                             </figcaption>
                                         </figure>
