--- a/portfolio.html
+++ b/portfolio.html
@@ -55,15 +55,18 @@
                                 <div class="col-md-6">
                                     <div class="row">
                                         <figure class="figure photo-tile col-md-12">
-                                            <a href="https://ac3charland.github.io/Word-Guess-Game/">
-                                                <img class="portfolio-img img-fluid center-block" src="assets/images/Hangman.png" alt="image1">
+                                            <a href="https://fransenfamilyjournal.herokuapp.com/">
+                                                <img class="portfolio-img img-fluid center-block" src="assets/images/FFJ.jpg" alt="image1">
                                             </a>
-                                            <figcaption class="figure-caption text-center"><strong>Hangman </strong><a href="https://github.com/ac3charland/Word-Guess-Game">(Github)</a></figcaption>
-                                            <figcaption class="figure-caption text-center">A hangman-style game built in Javascript and based around the theme of U.S. presidents. </figcaption>
+                                            <figcaption class="figure-caption text-center mt-3"><strong>Fransen Family Journal </strong><a href="https://github.com/ac3charland/FransenFamilyJournal">(Github)</a></figcaption>
+                                            <figcaption class="figure-caption text-center">A custom-built blogging site to keep an extended family connected. </figcaption>
                                             <figcaption class="figure-caption text-left">Technologies Used:
                                                 <ul>
+                                                    <li>MongoDB</li>
+                                                    <li>Passport.js</li>
+                                                    <li>Express.js</li>
                                                     <li>Bootstrap</li>
-                                                    <li>Javascript</li>
+                                                    <li>jQuery</li>
                                                 </ul>    
                                             </figcaption>
                                         </figure>
@@ -75,14 +78,14 @@
                                             <a href="https://shredditmern.herokuapp.com/" target="_blank">
                                                 <img class="portfolio-img img-fluid center-block" src="assets/images/Shreddit.png" alt="image2">
                                             </a>
-                                            <figcaption class="figure-caption text-center"><strong>Shreddit </strong><a href="https://github.com/ac3charland/Shreddit">(Github)</a></figcaption>
+                                            <figcaption class="figure-caption text-center mt-3"><strong>Shreddit </strong><a href="https://github.com/ac3charland/Shreddit">(Github)</a></figcaption>
                                             <figcaption class="figure-caption text-center">A full-stack MERN application allowing users to create short melodies in a grid-based sequencer. </figcaption>
                                             <figcaption class="figure-caption text-left">Technologies Used:
                                                 <ul>
                                                     <li>MongoDB</li>
-                                                    <li>React</li>
+                                                    <li>React.js</li>
                                                     <li>Materialzie</li>
-                                                    <li>Express</li>
+                                                    <li>Express.js</li>
                                                     <li>Node.js</li>
                                                     <li>Tone.js</li>
                                                 </ul>
@@ -99,7 +102,7 @@
                                             <a href="https://ac3charland.github.io/TriviaGame/" target="_blank">
                                                 <img class="portfolio-img img-fluid center-block" src="assets/images/Trivia.png" alt="image3">
                                             </a>
-                                            <figcaption class="figure-caption text-center"><strong>Trivia Game </strong><a href="https://github.com/ac3charland/TriviaGame">(Github)</a></figcaption>
+                                            <figcaption class="figure-caption text-center mt-3"><strong>Trivia Game </strong><a href="https://github.com/ac3charland/TriviaGame">(Github)</a></figcaption>
                                             <figcaption class="figure-caption text-center">A timed trivia game based around the theme of Star Wars memes.</figcaption>
                                             <figcaption class="figure-caption text-left">Technologies Used:
                                                 <ul>
@@ -116,7 +119,7 @@
                                             <a href="https://weatherwars.herokuapp.com/index.html" target="_blank">
                                                 <img class="portfolio-img img-fluid center-block" src="assets/images/WeatherWars.png" alt="image4">
                                             </a>
-                                            <figcaption class="figure-caption text-center"><strong>Weather Wars </strong><a href="https://github.com/ac3charland/WeatherWars">(Github)</a></figcaption>
+                                            <figcaption class="figure-caption text-center mt-3"><strong>Weather Wars </strong><a href="https://github.com/ac3charland/WeatherWars">(Github)</a></figcaption>
                                             <figcaption class="figure-caption text-center">A turn-based combat game that pits two cities against one another based on their current weather.</figcaption>
                                             <figcaption class="figure-caption text-left">Technologies Used:
                                                 <ul>
@@ -124,45 +127,6 @@
                                                     <li>Materialize</li>
                                                     <li>Firebase</li>
                                                     <li>jQuery</li>
-                                                </ul>
-                                            </figcaption>
-                                        </figure>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="row mb-4">
-                                <div class="col-md-6">
-                                    <div class="row">
-                                        <figure class="figure photo-tile col-md-12">
-                                            <a href="https://secure-lowlands-41424.herokuapp.com/" target="_blank">
-                                                <img class="portfolio-img img-fluid center-block" src="assets/images/MontyPython.png" alt="image3">
-                                            </a>
-                                            <figcaption class="figure-caption text-center"><strong>Monty Python's FriendFinder </strong><a href="https://github.com/ac3charland/FriendFinder">(Github)</a></figcaption>
-                                            <figcaption class="figure-caption text-center">A personality test to find your ideal Monty Python viewing partner based on a database of previous tests.</figcaption>
-                                            <figcaption class="figure-caption text-left">Technologies Used:
-                                                <ul>
-                                                    <li>Bootstrap</li>
-                                                    <li>Express.js</li>
-                                                </ul>
-                                            </figcaption>
-                                        </figure>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="row">
-                                        <figure class="figure photo-tile col-md-12">
-                                            <a href="https://hidden-plains-92005.herokuapp.com/" target="_blank">
-                                                <img class="portfolio-img img-fluid center-block" src="assets/images/EatABurger.png" alt="image4">
-                                            </a>
-                                            <figcaption class="figure-caption text-center"><strong>EatABurger </strong><a href="https://github.com/ac3charland/EatABurger">(Github)</a></figcaption>
-                                            <figcaption class="figure-caption text-center">The world's finest purveyor of virtual burgers. </figcaption>
-                                            <figcaption class="figure-caption text-left">Technologies Used:
-                                                <ul>
-                                                    <li>Handlebars.js</li>
-                                                    <li>Express.js</li>
-                                                    <li>MySQL</li>
-                                                    <li>MVC Design</li>
                                                 </ul>
                                             </figcaption>
                                         </figure>
